examples/pass/WxlRxl-Wxl.stl
/** WRelim **/
global x; 
local l; 

/** Optimised **/ 
write(x,l); 

/** Unoptimised **/ 
write(x,l); 
read(x,l);
