examples/fail/WRswap.stl
/** RRswap **/

global x; 
local l; 

/** Optimised **/ 

read(x,l); 

/** Unoptimised **/ 

write(x,l); 
